# VioletRX

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
cmake/Modules/: FindGnuradio-osmosdr.cmake
cpp/: CMakeLists.txt
cpp/async_core/: CMakeLists.txt  async_receiver.cpp  async_receiver.h  async_receiver_iface.h  async_vfo.cpp  async_vfo.h  async_vfo_iface.h  error_codes.cpp  error_codes.h  events.h  events_format.h  types.h  worker_thread.cpp  worker_thread.h
cpp/async_core_c/: CMakeLists.txt  async_receiver_c.cpp  async_receiver_c.h  async_vfo_c.cpp  async_vfo_c.h  events_c.h  events_conversion.cpp  events_conversion.h  types_c.h
cpp/core/: CMakeLists.txt  receiver.cpp  receiver.h  vfo_channel.cpp  vfo_channel.h
cpp/core/interfaces/: udp_sink_f.cpp  udp_sink_f.h
cpp/core/receivers/: nbrx.cpp  nbrx.h  receiver_base.cpp  receiver_base.h  wfmrx.cpp  wfmrx.h
cpp/dsp/: CMakeLists.txt  buffer_sink.cpp  buffer_sink.h  correct_iq_cc.cpp  correct_iq_cc.h  downconverter.cpp  downconverter.h  fm_deemph.cpp  fm_deemph.h  lpf.cpp  lpf.h  multichannel_downconverter.cpp  multichannel_downconverter.h  resampler_xx.cpp  resampler_xx.h  rx_agc_xx.cpp  rx_agc_xx.h  rx_demod_am.cpp  rx_demod_am.h  rx_demod_fm.cpp  rx_demod_fm.h  rx_fft.cpp  rx_fft.h  rx_filter.cpp  rx_filter.h  rx_meter.cpp  rx_meter.h  rx_noise_blanker_cc.cpp  rx_noise_blanker_cc.h  rx_rds.cpp  rx_rds.h  sniffer_f.cpp  sniffer_f.h  stereo_demod.cpp  stereo_demod.h
cpp/dsp/filter/: fir_decim.cpp  fir_decim.h
cpp/dsp/rds/: decoder.h  decoder_impl.cc  parser.h  parser_impl.cc
cpp/grpc/: CMakeLists.txt  client.cpp  client.h  client_call.h  client_test.cpp  events_listener_example.cpp  grpc_async_receiver.cpp  grpc_async_receiver.h  grpc_async_vfo.cpp  grpc_async_vfo.h  headless_server.cpp  server.cpp  server.h  transactions_poster.cpp  transactions_poster.h  type_conversion.cpp  type_conversion.h
cpp/grpc_server/: CMakeLists.txt  server.h  transactions_poster.cpp  transactions_poster.h
cpp/qtclient/: CMakeLists.txt  agc_options.cpp  agc_options.h  agc_options.ui  audio_options.cpp  audio_options.h  audio_options.ui  audioplayer.cpp  audioplayer.h  bandplan.cpp  bandplan.h  bookmarks.cpp  bookmarks.h  bookmarkstablemodel.cpp  demod_options.cpp  demod_options.h  demod_options.ui.autosave  dockaudio.cpp  dockaudio.h  dockaudio.ui  dockbookmarks.cpp  dockbookmarks.h  dockbookmarks.ui  dockfft.cpp  dockfft.h  dockfft.ui  dockinputctl.cpp  dockinputctl.h  dockinputctl.ui  dockrds.h  expandablewidget.cpp  expandablewidget.h  freqctrl.cpp  freqctrl.h  ioconfig.cpp  ioconfig.h  ioconfig.ui  main.cpp  mainwindow.cpp  mainwindow.h  (+12 more)
cpp/qtclient/ctk/: ctkRangeSlider.cpp  ctkRangeSlider.h
cpp/qtclient/plotter/: bookmarksgraphicsitem.cpp  bookmarksgraphicsitem.h  fftaverager.cpp  fftaverager.h  fftgraphicsitem.cpp  fftgraphicsitem.h  gridgraphicsitem.cpp  gridgraphicsitem.h  plotter.cpp  plotter.h  plottergraphicsview.cpp  plottergraphicsview.h  vfographicsitem.cpp  vfographicsitem.h  waterfall.cpp  waterfall.h  waterfall_colormaps.cpp  waterfall_colormaps.h
cpp/qtclient/resources/: icons.qrc  textfiles.qrc
cpp/utility/: CMakeLists.txt  assert.cpp  assert.h  worker_thread.cpp  worker_thread.h
envoy/: envoy-connectrpc.yaml  envoy-webgrpc.yaml
protos/: receiver.proto
rust/: CMakeLists.txt  Cargo.toml
rust/egui-client/: Cargo.toml
rust/egui-client/src/: app.rs  freqctrl.rs  lib.rs  main.rs  web.rs
rust/egui-client/src/plotter/: fftaverager.rs  mod.rs  plotter.rs  waterfall.rs
rust/violetrx-c/: Cargo.toml  build.rs
rust/violetrx-c/src/: lib.rs  violetrx_c.rs
rust/violetrx-traits/: Cargo.toml
rust/violetrx-traits/src/: common.rs  error.rs  lib.rs  receiver.rs  vfo.rs
scripts/: generate_wasm.sh  setup_web.sh
typescript/webclient/: buf.gen.yaml  package-lock.json  package.json  webclient-1.0.0.tgz  webpack.config.js
typescript/webclient/src/: index.html  index.ts
