[package]
name = "egui-client"
authors = ["Ahmed Essam <aessam.dahy@gmail.com>"]
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.72"
eframe = { version = "0.27.2", features = ["default", "glow"] }
egui = "0.27.2"
egui_glow = "0.27.2"
egui_extras = { version = "0.27.2", features = ["default", "all_loaders"] }
violetrx-traits = { workspace = true }
wgpu = { version = "0.19.1", default-features = false, features = [
    # Make the renderer `Sync` even on wasm32, because it makes the code simpler:
    "fragile-send-sync-non-atomic-wasm",
    "webgpu",
    "webgl",
] }
glow = "0.13"
log.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.90"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

