[package]
name = "violetrx-c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
violetrx-traits = { path = "../violetrx-traits/" }
libc = "0.2.0"
futures = "0.3.28"
num-traits = "0.2"
num-derive = "0.3"
async-stream = "0.3.3"
async-trait = "0.1.73"
